--- a/ODataService/Web.config
+++ b/ODataService/Web.config
@@ -8,6 +8,15 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  <connectionStrings>
+    <add name="ProductsContext" 
+         connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123"
+         providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>  
+    
+    
+  
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -52,13 +61,12 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <providers>      
+      <provider invariantName="MySql.Data.MySqlClient"
+          type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6"/>
+      <provider invariantName="System.Data.SqlClient"
+          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 </configuration>
