Entity Code First + local mySQL

--- a/ODataService/Web.config
+++ b/ODataService/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="ProductsContext" 
+    <add name="MainConnectionString" 
          connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123"
          providerName="MySql.Data.MySqlClient" />
   </connectionStrings>  
@@ -60,7 +60,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework>
+  <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>      
       <provider invariantName="MySql.Data.MySqlClient"
