Enabling CORS for EVERY wesite (CAUTION)

--- a/ODataService/Web.config
+++ b/ODataService/Web.config
@@ -10,9 +10,8 @@
   </configSections>
   
   <connectionStrings>
-    <add name="MainConnectionString" 
-         connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="MainConnectionString" connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123" providerName="MySql.Data.MySqlClient" />
+    <add name="DeployConnectionString" connectionString="server=mysqlinstance.conu883ntaq5.us-west-2.rds.amazonaws.com;port=3306;database=products;uid=root;password=DBrjkjltw123" providerName="MySql.Data.MySqlClient" />  
   </connectionStrings>  
     
     
@@ -61,12 +60,10 @@
     </compilers>
   </system.codedom>
   <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>      
-      <provider invariantName="MySql.Data.MySqlClient"
-          type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6"/>
-      <provider invariantName="System.Data.SqlClient"
-          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
