--- a/ODataService/Web.config
+++ b/ODataService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. по адресу:
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,8 +10,12 @@
   </configSections>
   
   <connectionStrings>
-    <add name="MainConnectionString" connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123" providerName="MySql.Data.MySqlClient" />
-    <add name="DeployConnectionString" connectionString="server=mysqlinstance.conu883ntaq5.us-west-2.rds.amazonaws.com;port=3306;database=products;uid=root;password=DBrjkjltw123" providerName="MySql.Data.MySqlClient" />  
+    <add name="MainConnectionString" connectionString="server=localhost;port=3306;database=products;uid=root;password=DBrjkjltw123"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="DeployConnectionString" connectionString="server=mysqlinstance.conu883ntaq5.us-west-2.rds.amazonaws.com;port=3306;database=products;uid=root;password=DBrjkjltw123"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="ODataServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ODataServiceContext-20161024201851; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ODataServiceContext-20161024201851.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>  
     
     
